feat: add role module
